--- a/index2.html
+++ b/index2.html
@@ -7,24 +7,74 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; background-color: #f4f4f4; }
-    .container { max-width: 800px; margin: auto; display: flex; flex-wrap: wrap; gap: 20px; }
-    .chart-container { flex: 1; min-width: 400px; }
+    .container { max-width: 800px; margin: auto; }
+    .chart-container { max-width: 100%; }
     canvas { max-width: 100%; height: 500px !important; }
-    .form-container { flex: 0 0 250px; min-width: 200px; }
-    .form-group { margin: 10px 0; }
-    label { display: block; font-size: 12px; margin-bottom: 5px; }
-    input { width: 100%; padding: 5px; font-size: 12px; }
-    button { width: 100%; padding: 10px; background-color: #36A2EB; color: white; border: none; cursor: pointer; margin-top: 10px; }
-    button:hover { background-color: #1e87d0; }
-    h3 { font-size: 14px; margin-bottom: 10px; color: #333; }
+    .open-popup-btn { 
+      display: block; 
+      margin: 20px auto; 
+      padding: 10px 20px; 
+      background-color: #36A2EB; 
+      color: white; 
+      border: none; 
+      border-radius: 5px; 
+      cursor: pointer; 
+      font-size: 14px; 
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2); 
+      transition: background-color 0.3s; 
+    }
+    .open-popup-btn:hover { background-color: #1e87d0; }
+    .popup { 
+      display: none; 
+      position: fixed; 
+      top: 50%; 
+      left: 50%; 
+      transform: translate(-50%, -50%); 
+      background-color: white; 
+      padding: 20px; 
+      border-radius: 8px; 
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3); 
+      z-index: 1001; 
+      max-width: 300px; 
+      width: 90%; 
+    }
+    .popup-overlay { 
+      display: none; 
+      position: fixed; 
+      top: 0; 
+      left: 0; 
+      width: 100%; 
+      height: 100%; 
+      background: rgba(0,0,0,0.5); 
+      z-index: 1000; 
+    }
+    .popup h3 { font-size: 14px; margin-bottom: 10px; color: #333; }
+    .form-group { margin: 8px 0; }
+    label { display: block; font-size: 12px; margin-bottom: 3px; }
+    input { width: 100%; padding: 5px; font-size: 12px; box-sizing: border-box; }
+    .popup-buttons { display: flex; gap: 10px; margin-top: 10px; }
+    button { 
+      flex: 1; 
+      padding: 8px; 
+      border: none; 
+      border-radius: 5px; 
+      cursor: pointer; 
+      font-size: 12px; 
+    }
+    .submit-btn { background-color: #36A2EB; color: white; }
+    .submit-btn:hover { background-color: #1e87d0; }
+    .close-btn { background-color: #ccc; color: #333; }
+    .close-btn:hover { background-color: #aaa; }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="chart-container">
       <canvas id="kpiChart"></canvas>
+      <button class="open-popup-btn">Modificar Datos</button>
     </div>
-    <div class="form-container">
+    <div class="popup-overlay"></div>
+    <div class="popup">
       <h3>Modificar Datos</h3>
       <form id="kpiForm">
         <div class="form-group">
@@ -67,7 +117,10 @@
           <label>Madurez gestión riesgos (%):</label>
           <input type="number" id="kpi10" min="0" max="100" value="82">
         </div>
-        <button type="submit">Actualizar Gráfico</button>
+        <div class="popup-buttons">
+          <button type="submit" class="submit-btn">Actualizar</button>
+          <button type="button" class="close-btn">Cerrar</button>
+        </div>
       </form>
     </div>
   </div>
@@ -160,6 +213,26 @@
       }
     });
 
+    const popup = document.querySelector('.popup');
+    const popupOverlay = document.querySelector('.popup-overlay');
+    const openPopupBtn = document.querySelector('.open-popup-btn');
+    const closePopupBtn = document.querySelector('.close-btn');
+
+    openPopupBtn.addEventListener('click', () => {
+      popup.style.display = 'block';
+      popupOverlay.style.display = 'block';
+    });
+
+    closePopupBtn.addEventListener('click', () => {
+      popup.style.display = 'none';
+      popupOverlay.style.display = 'none';
+    });
+
+    popupOverlay.addEventListener('click', () => {
+      popup.style.display = 'none';
+      popupOverlay.style.display = 'none';
+    });
+
     document.getElementById('kpiForm').addEventListener('submit', function(e) {
       e.preventDefault();
       const newData = [
@@ -176,6 +249,8 @@
       ];
       kpiChart.data.datasets[0].data = newData;
       kpiChart.update();
+      popup.style.display = 'none';
+      popupOverlay.style.display = 'none';
     });
   </script>
 </body>
