--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
   <title>Gráfico de KPIs de Gestión de Riesgos</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background-color: #f4f4f4; }
+    body { font-family: Arial, sans-serif; margin: 20px; background-color: #ffffff; }
     .container { max-width: 800px; margin: auto; }
     .chart-container { max-width: 100%; }
     canvas { max-width: 100%; height: 500px !important; }
@@ -63,7 +63,7 @@
     }
     .submit-btn { background-color: #36A2EB; color: white; }
     .submit-btn:hover { background-color: #1e87d0; }
-    .close-btn { background-color: #ccc; color: #333; }
+    .close-btn { background-color: #ffffff; color: #333; }
     .close-btn:hover { background-color: #aaa; }
   </style>
 </head>
