--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
   <title>Gráfico de KPIs de Gestión de Riesgos</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background-color: #ffffff; }
+    body { font-family: Arial, sans-serif; margin: 20px; background-color: #000000; }
     .container { max-width: 800px; margin: auto; }
     .chart-container { max-width: 100%; }
     canvas { max-width: 100%; height: 500px !important; }
