cambio estilo lineas blancas

--- a/index2.html
+++ b/index2.html
@@ -183,8 +183,8 @@
       options: {
         scales: {
           r: {
-            angleLines: { display: true, color: '#666' },
-            grid: { color: '#666' },
+            angleLines: { display: true, color: 'white' },
+            grid: { color: 'white' },
             pointLabels: { 
               font: { size: 10 },
               padding: 20,
@@ -196,7 +196,7 @@
           }
         },
         plugins: {
-          legend: { position: 'top', labels: { color: '#333' } },
+          legend: { position: 'top', labels: { color: 'white' } },
           tooltip: {
             enabled: true,
             callbacks: {
