--- a/index2.html
+++ b/index2.html
@@ -6,37 +6,38 @@
   <title>Gráfico de KPIs de Gestión de Riesgos</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background-color: #000000; }
-    .container { max-width: 800px; margin: auto; }
+    body { font-family: Arial, sans-serif; margin: 20px; background-color: #000000; color: #FFFFFF; }
+    .container { max-width: 800px; margin: auto; background-color: #000000; }
     .chart-container { max-width: 100%; }
-    canvas { max-width: 100%; height: 500px !important; }
+    canvas { max-width: 100%; height: 500px !important; background-color: #000000; }
     .open-popup-btn { 
       display: block; 
       margin: 20px auto; 
-      padding: 10px 20px; 
-      background-color: #36A2EB; 
-      color: white; 
+      padding: 12px 24px; 
+      background-color: #1E87D0; 
+      color: #FFFFFF; 
       border: none; 
       border-radius: 5px; 
       cursor: pointer; 
-      font-size: 14px; 
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2); 
+      font-size: 16px; 
+      box-shadow: 0 2px 5px rgba(0,0,0,0.5); 
       transition: background-color 0.3s; 
     }
-    .open-popup-btn:hover { background-color: #1e87d0; }
+    .open-popup-btn:hover { background-color: #36A2EB; }
     .popup { 
       display: none; 
       position: fixed; 
       top: 50%; 
       left: 50%; 
       transform: translate(-50%, -50%); 
-      background-color: white; 
+      background-color: #1A1A1A; 
       padding: 20px; 
       border-radius: 8px; 
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3); 
+      box-shadow: 0 4px 10px rgba(0,0,0,0.5); 
       z-index: 1001; 
       max-width: 300px; 
       width: 90%; 
+      color: #FFFFFF; 
     }
     .popup-overlay { 
       display: none; 
@@ -45,13 +46,13 @@
       left: 0; 
       width: 100%; 
       height: 100%; 
-      background: rgba(0,0,0,0.5); 
+      background: rgba(0,0,0,0.7); 
       z-index: 1000; 
     }
-    .popup h3 { font-size: 14px; margin-bottom: 10px; color: #333; }
+    .popup h3 { font-size: 16px; margin-bottom: 10px; color: #FFFFFF; }
     .form-group { margin: 8px 0; }
-    label { display: block; font-size: 12px; margin-bottom: 3px; }
-    input { width: 100%; padding: 5px; font-size: 12px; box-sizing: border-box; }
+    label { display: block; font-size: 14px; margin-bottom: 3px; color: #FFFFFF; }
+    input { width: 100%; padding: 5px; font-size: 14px; box-sizing: border-box; background-color: #333333; color: #FFFFFF; border: 1px solid #555555; }
     .popup-buttons { display: flex; gap: 10px; margin-top: 10px; }
     button { 
       flex: 1; 
@@ -59,12 +60,12 @@
       border: none; 
       border-radius: 5px; 
       cursor: pointer; 
-      font-size: 12px; 
+      font-size: 14px; 
     }
-    .submit-btn { background-color: #36A2EB; color: white; }
-    .submit-btn:hover { background-color: #1e87d0; }
-    .close-btn { background-color: #ffffff; color: #333; }
-    .close-btn:hover { background-color: #aaa; }
+    .submit-btn { background-color: #1E87D0; color: #FFFFFF; }
+    .submit-btn:hover { background-color: #36A2EB; }
+    .close-btn { background-color: #555555; color: #FFFFFF; }
+    .close-btn:hover { background-color: #777777; }
   </style>
 </head>
 <body>
@@ -117,7 +118,7 @@
           <label>Madurez gestión riesgos (%):</label>
           <input type="number" id="kpi10" min="0" max="100" value="82">
         </div>
-        <div class="popup-buttons">
+        <div class="form-group popup-buttons">
           <button type="submit" class="submit-btn">Actualizar</button>
           <button type="button" class="close-btn">Cerrar</button>
         </div>
@@ -183,22 +184,32 @@
       options: {
         scales: {
           r: {
-            angleLines: { display: true, color: 'white' },
-            grid: { color: 'white' },
+            angleLines: { display: true, color: '#E0E0E0' },
+            grid: { color: '#E0E0E0' },
             pointLabels: { 
-              font: { size: 10 },
+              font: { size: 12, color: '#FFFFFF' },
               padding: 20,
               callback: function(label) {
                 return label.split('\n');
               }
             },
-            ticks: { beginAtZero: true, max: 100, stepSize: 20 }
+            ticks: { 
+              beginAtZero: true, 
+              max: 100, 
+              stepSize: 20, 
+              color: '#FFFFFF', 
+              backdropColor: 'transparent',
+              font: { size: 12 }
+            }
           }
         },
         plugins: {
-          legend: { position: 'top', labels: { color: 'white' } },
+          legend: { position: 'top', labels: { color: '#FFFFFF', font: { size: 14 } } },
           tooltip: {
             enabled: true,
+            backgroundColor: '#333333',
+            titleColor: '#FFFFFF',
+            bodyColor: '#FFFFFF',
             callbacks: {
               label: function(context) {
                 const index = context.dataIndex;
